CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.10

	- Documentation fixes (STR #2994, STR #2995, STR #3008, STR #3056,
	  STR #3057)
	- The rastertohp driver did not set the 1-sided printing mode when
	  needed (STR #3131)
	- Now use a wrapper program instead of our fork of the Xpdf code to
	  support printing of PDF files. The new wrapper supports using Xpdf,
	  poppler, or Ghostscript to convert PDF files to PostScript (STR #3129)
	- Long job names caused problems with some PJL printers (STR #3125)
	- The lpq command did not work when showing all destinations (STR #3117)
	- The scheduler used a codeset name of UTF8 which is not supported on
	  Solaris (STR #3113)
	- cupsGetJobs() did not work with a NULL destination (STR #3107)
	- Fixed a localization problem for option choices (incorrectly) named
	  "Custom" (STR #3106)
	- The fallback OpenSSL random number seeding would not work (STR #3079)
	- The scheduler might miss a child signal, causing high CPU usage.
	- The scheduler did not enforce quotas after the job history was
	  unloaded (STR #3078)
	- The job-k-limit, job-page-limit, and job-quota-period attributes
	  could not be set using the lpadmin command (STR #3077)
	- httpSeparateURI() did not error out on URIs with a missing port
	  number after a colon.
	- Fixed a Valgrind-detected initialization error when creating a
	  missing directory on startup.
	- The scheduler did not always read all of the HTTP headers from a
	  CGI script/program.
        - The scheduler did not always set the "air" property in Bonjour/DNS-SD
          registrations.
	- The scheduler incorrectly compared Mac OS X UUIDs for access
	  control, preventing access in certain configurations.
        - The IPP backend incorrectly reset the required authentication
	  to Kerberos when authentication failed.
	- The scheduler no longer looks up the local hostname by default;
	  turn on hostname lookups to restore the previous behavior.